--- a/index.html
+++ b/index.html
@@ -47,21 +47,17 @@
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="/img/Carousel_Test_2_2560.jpg" alt="Chania" width="460" height="345">
+            <img src="/img/Editorial_test_764x500.jpg" alt="Chania" width="460" height="345">
           </div>
           <div class="item">
-            <img src="/img/CarouselTestImage1.jpg" alt="Chania" width="460" height="345">
+            <img src="/img/Corporate_Test_764x500.jpg" alt="Chania" width="460" height="345">
           </div>
           <div class="item">
-            <img src="/img/CarouselTestImage2.jpg" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="/img/CarouselTestImage1%202.jpg" alt="Flower" width="460" height="345">
+            <img src="/img/Personal_Test_764x500.jpg" width="460" height="345">
           </div>
         </div>
         <!-- Left and right controls -->
@@ -77,14 +73,45 @@
     </div>
   </div>
   <div id="section2" class="container-fluid">
-    <h1>Samuel L Jackson Ipsum</h1>
-    <p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
+    <h1 class="bio">Samuel L Jackson Ipsum</h1>
+    <p class="bio">Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
   </div>
-  <div id="section3" class="container-fluid">
-    <h1>Section 3</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <div>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <img src="https://c.s-microsoft.com/en-us/CMSImages/OneCnsmr_WinPCsBlogger_0415_368x207_EN_US.jpg?version=1f781429-af15-e586-3f21-caeccdc2aea9" alt="...">
+      <div class="caption">
+        <h3>Windows 10 PCs</h3>
+        <p>See how Windows 10 changes the way Doyin works.</p>
+        <p><a href="#"></a></p>
+      </div>
+    </div>
   </div>
+</div>
+<div>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <img src="https://c.s-microsoft.com/en-us/CMSImages/Xbox_Elite_0501_368x207_EN_US.jpg?version=048ec9dd-87df-08ea-63b8-dff2c46c21d7" alt="...">
+      <div class="caption">
+        <h3>Windows 10 PCs</h3>
+        <p>See how Windows 10 changes the way Doyin works.</p>
+        <p><a href="#"></a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <img src="https://c.s-microsoft.com/en-us/CMSImages/Xbox_Elite_0501_368x207_EN_US.jpg?version=048ec9dd-87df-08ea-63b8-dff2c46c21d7" alt="...">
+      <div class="caption">
+        <h3>Windows 10 PCs</h3>
+        <p>See how Windows 10 changes the way Doyin works.</p>
+        <p><a href="#"></a></p>
+      </div>
+    </div>
+  </div>
+</div>
   <div id="section41" class="container-fluid">
     <h1>Section 4 Submenu 1</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
@@ -96,7 +123,6 @@
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   </div>
 </div>
-<h1>Mike Hipple Photography</h1>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" type="text/javascript"></script>
