--- a/index.html
+++ b/index.html
@@ -19,18 +19,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">mike hipple photography</a>
+            <a class="navbar-brand" href="#">Mike Hipple Photography</a>
           </div>
           <div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
-                <li><a href="#section1">Section 1</a></li>
-                <li><a href="#section2">Section 2</a></li>
-                <li><a href="#section3">Section 3</a></li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#section41">Section 4-1</a></li>
-                  <li><a href="#section42">Section 4-2</a></li>
+                <li><a href="#section2">Editorial</a></li>
+                <li><a href="#section3">Contact</a></li>
                 </ul>
               </li>
             </ul>
@@ -73,55 +68,52 @@
     </div>
   </div>
   <div id="section2" class="container-fluid">
-    <h1 class="bio">Samuel L Jackson Ipsum</h1>
-    <p class="bio">Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
+    <h1 class="bio">Mike Hipple Photography</h1>
+    <p class="bio">I am a creative professional with over 20 years of freelance photography experience for publications, corporate clients, and individuals.  Clients I have worked with in the past have included Microsoft, National Geographic Traveler, Seattle’s Best Coffee, and Seattle Magazine, and many more.  Whether it is professional or personal, I bring style, flare, and beautiful design to any project.
+    </p>
   </div>
-  <div>
+
   <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <img src="https://c.s-microsoft.com/en-us/CMSImages/OneCnsmr_WinPCsBlogger_0415_368x207_EN_US.jpg?version=1f781429-af15-e586-3f21-caeccdc2aea9" alt="...">
-      <div class="caption">
-        <h3>Windows 10 PCs</h3>
-        <p>See how Windows 10 changes the way Doyin works.</p>
-        <p><a href="#"></a></p>
-      </div>
+      <img src="/img/TEXT_Books_300x220.jpg" alt="...">
     </div>
   </div>
 </div>
 <div>
   <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <img src="https://c.s-microsoft.com/en-us/CMSImages/Xbox_Elite_0501_368x207_EN_US.jpg?version=048ec9dd-87df-08ea-63b8-dff2c46c21d7" alt="...">
-      <div class="caption">
-        <h3>Windows 10 PCs</h3>
-        <p>See how Windows 10 changes the way Doyin works.</p>
-        <p><a href="#"></a></p>
-      </div>
+      <img src="/img/TEXT_Magazines_300x220.jpg" alt="...">
     </div>
   </div>
 </div>
-<div>
-  <div class="col-sm-6 col-md-3">
-    <div class="thumbnail">
-      <img src="https://c.s-microsoft.com/en-us/CMSImages/Xbox_Elite_0501_368x207_EN_US.jpg?version=048ec9dd-87df-08ea-63b8-dff2c46c21d7" alt="...">
-      <div class="caption">
-        <h3>Windows 10 PCs</h3>
-        <p>See how Windows 10 changes the way Doyin works.</p>
-        <p><a href="#"></a></p>
+
+  <div id="formdiv">
+
+    <header>
+  <h1>CONTACT ME</h1>
+</header>
+<section>
+  <div class="arrow-up"></div>
+    <form id="contact" class="form-horizontal" role="form">
+      <div class="form-group">
+        <div class="col-sm-12">
+          <input id="name" name="name" type="text" placeholder="NAME" class="form-control">
+        </div>
       </div>
-    </div>
+      <div class="form-group">
+        <div class="col-sm-12">
+          <input id="email" name="email" type="email" placeholder="EMAIL" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-12">
+          <textarea class="form-control" id="message" name="message" placeholder="MESSAGE"></textarea>
+        </div>
+      </div>
+      <button id="send" name="send" class="btn btn-block">send</button>
+    </form>
   </div>
-</div>
-  <div id="section41" class="container-fluid">
-    <h1>Section 4 Submenu 1</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  </div>
-  <div id="section42" class="container-fluid">
-    <h1>Section 4 Submenu 2</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  </div>
+</section>
 </div>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
